--- a/FastInserts/FastInsertsConsole/FastInsertsConsole.csproj
+++ b/FastInserts/FastInsertsConsole/FastInsertsConsole.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="doc\" />
+    <Folder Include="sql\" />
+  </ItemGroup>
+
 </Project>
