--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /FastInserts/.vs/FastInserts
 /FastInserts/FastInsertsConsole/bin
 /FastInserts/FastInsertsConsole/obj
+
+FastInserts/.vs/ProjectEvaluation/
