--- a/FastInserts/FastInsertsConsole/FastInsertsConsole.csproj
+++ b/FastInserts/FastInsertsConsole/FastInsertsConsole.csproj
@@ -8,15 +8,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="sql\custom\getserverinfo.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="sql\custom\getserverinfo.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
